src/objects/Silverpop_Contact_Click__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign_Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Silverpop Contact Clicks</relationshipLabel>
        <relationshipName>Silverpop_Contact_Clicks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_Name__c</fullName>
        <label>Click_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Silverpop Contact Clicks</relationshipLabel>
        <relationshipName>Silverpop_Contact_Clicks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Description__c</fullName>
        <label>Email_Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Timestamp__c</fullName>
        <label>Event_Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDC_Mailing_ID__c</fullName>
        <label>SFDC_Mailing_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Status__c</fullName>
        <label>Send_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Silverpop_Email_Campaign_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Silverpop Email Campaign Link</label>
        <referenceTo>silverpop__Silverpop_Email_Campaign_Link__c</referenceTo>
        <relationshipLabel>Silverpop Contact Clicks</relationshipLabel>
        <relationshipName>Silverpop_Contact_Clicks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spop_Mailing_ID__c</fullName>
        <label>Spop_Mailing_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Silverpop Contact Click</label>
    <nameField>
        <label>Silverpop Contact Click Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Silverpop Contact Clicks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>